2009-11-19  Eric Z. Ayers  <zundel@google.com>

        Reviewed by Pavel Feldman.

        Updated timeline paint test to ignore width and height.  GTK+ testing
        uses a different top level window size than other platforms.

        https://bugs.webkit.org/show_bug.cgi?id=31402

        * inspector/timeline-paint-expected.txt:
        * inspector/timeline-test.js:
        * platform/win/Skipped:

2009-11-19  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        WAI-ARIA roles not supported on image map <area>
        https://bugs.webkit.org/show_bug.cgi?id=31525

        * accessibility/aria-used-on-image-maps-expected.txt: Added.
        * accessibility/aria-used-on-image-maps.html: Added.
        * platform/gtk/Skipped:
        * platform/win/Skipped:

2009-11-19  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/7035231>
        Support closed caption in <video> element

        * media/media-captions-expected.txt: Added.
        * media/media-captions.html: Added.
        * media/content/counting-captioned.mov: Added.

        * platform/gtk/Skipped:
        * platform/mac-leopard/Skipped:
        * platform/mac-tiger/Skipped:
        * platform/win/Skipped:
            Skipped on platforms that don't support closed captions yet.

2009-11-19  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Gustavo Noronha Silva.

        Web Inspector: Implement "show inspector" in WebKit GTK
        API and enable console tests.

        https://bugs.webkit.org/show_bug.cgi?id=31669

        * platform/gtk/Skipped:

2009-11-19  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Eric Seidel.

        Some tests in fast/css-generated-content can be dumpAsText test
        https://bugs.webkit.org/show_bug.cgi?id=31663

        * fast/css-generated-content/absolute-position-inside-inline-expected.txt: Added.