@@ -1,0 +1,2 @@
+PASS: test did not crash, bug 31652.
+PASS: test did not crash, bug 31652.
