@@ -1,0 +1,10 @@
+<script>
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+</script>
+<ol start="3888" type="i">
+<li>PASS: test did not crash, bug 31652.</li>
+</ol>
+<ol start="4888" type="i">
+<li>PASS: test did not crash, bug 31652.</li>
+</ol>
